# json-part

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
json_part/: __init__.py  json_part_parser.py  parser.py  test.py
sample/: api_sample.py  index.html  openai_sample.py  parser.py
test/: test_base.py
