[tool.poetry]
name = "json-part"
version = "0.1.0"
description = ""
authors = ["Marcin Wątroba <markowanga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
isort = "^5.13.2"
poethepoet = "^0.24.4"
pytest = "^8.0.0"


[tool.poe.tasks]
black = "black --check json_part test"
isort = "isort -c json_part test"
mypy = "mypy --strict json_part test"
pytest = "pytest"
black_fix = "black json_part test"
isort_fix = "isort json_part test"
lint_fix = ['black_fix', 'isort_fix']
lint_check = ['black', 'isort', 'mypy']
before_mr = ['black', 'isort', 'mypy', 'pytest']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
